--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,8 +1,8 @@
-deploy.ant.properties.file=C:\\Users\\USER\\AppData\\Roaming\\NetBeans\\8.2\\config\\GlassFishEE6\\Properties\\gfv3-1759671976.properties
+deploy.ant.properties.file=C:\\Users\\JJ\\AppData\\Roaming\\NetBeans\\8.2\\config\\GlassFishEE6\\Properties\\gfv3-1481751481.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=D:/glassfish-4.1.1/glassfish/domains/domain1
-j2ee.server.home=D:/glassfish-4.1.1/glassfish
-j2ee.server.instance=[D:\\glassfish-4.1.1\\glassfish;D:\\glassfish-4.1.1\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
-j2ee.server.middleware=D:/glassfish-4.1.1
+j2ee.server.domain=C:/Users/JJ/AppData/Roaming/NetBeans/8.2/config/GF_4.1.1/domain1
+j2ee.server.home=C:/Program Files/glassfish-4.1.1/glassfish
+j2ee.server.instance=[C:\\Program Files\\glassfish-4.1.1\\glassfish;C:\\Program Files\\glassfish-4.1.1\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=C:/Program Files/glassfish-4.1.1
 selected.browser=Chrome
-user.properties.file=C:\\Users\\USER\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\JJ\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
